get Users with some gruads and workings
